# ToolShop

./: .gitignore  README.md
backend/: .env  .env.example  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
backend/apps/: urls.py
backend/apps/shop/: admin.py  apps.py  filters.py  models.py  urls.py  views.py
backend/apps/shop/migrations/: 0001_initial.py
backend/apps/shop/serializers/: carts.py  orders.py  product.py  products.py
backend/apps/users/: admin.py  models.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_user_options.py
backend/apps/users/serializers/: auth.py
backend/config/: local_db.sqlite3  storages.py  urls.py
backend/config/settings/: base.py  dev.py  local.py  prod.py  settings.py
frontend/: .env  Dockerfile.frontend  dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  package-lock.json  package.json
frontend/src/api/: auth.ts  products.ts
frontend/src/components/: header.tsx
frontend/src/pages/: CartPage.tsx  HomePage.tsx  LoginPage.tsx  OrdersPage.tsx  ProductDetailPage.tsx  ProductPage.tsx  RegisterPage.tsx  SuccessPage.tsx
frontend/src/src/: App.jsx  index.js
frontend/src/src/components/: cart.jsx  header.jsx  login.jsx  order.jsx  product_order.jsx  products.jsx  signup.jsx
