[project]
name = "web-api-tools-shop"
version = "0.1.0"
description = "Django project with required dependencies"
authors = ["invcxze@gmail.com>"]
license = {text = "MIT"}
dependencies = [
    "asgiref==3.8.1",
    "autopep8==2.3.2",
    "django==5.1.7",
    "django-query-counter==0.4.1",
    "django-silk==5.3.2",
    "djangorestframework==3.15.2",
    "gprof2dot==2024.6.6",
    "pycodestyle==2.12.1",
    "sqlparse==0.5.3",
    "tabulate==0.9.0",
    "django-cors-headers==4.7.0"
]
requires-python = ">=3.12"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"